@@ -10,6 +10,7 @@ Verion 1.5.3
 * more const correctness
 * functions added that mask bad values in channel-dependent manner from decoded VDIF streams if EDV4 is used.  Per-channel accounting of zero values is provided.
 * Fix some data rate and frame rate calculations in mark5bfile.h
+* New function: void snprintmark5bfilesummary(char *str, int maxLength, const struct mark5b_file_summary *sum)
 
 Version 1.5.2
 * Post DiFX-2.4
